--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "is-mp3",
   "version": "0.0.0",
-  "description": "Check if a Buffer/Uint8Array is MP3 file.",
+  "description": "Check if a Buffer/Uint8Array is a MP3 file.",
   "license": "MIT",
   "repository": "hemanth/is-mp3",
   "author": {
